Fix bad line spacing CSS.

--- a/source/utilities/password.css
+++ b/source/utilities/password.css
@@ -1,5 +1,5 @@
 #output > p {
-    line-height: 0.2em;
+    margin: 0.5em;
     font-size: 1.5em;
     text-align: center;
     cursor: text;
